--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo test --all-features -- --test-threads 1
+      - run: cargo test --all-features
   coverage:
     runs-on: ubuntu-latest
     steps:
